# TeachingManagement

./: CMakeLists.txt  Course List.h  Course List.txt  Course_list2.h  Import student score.h  Statistical table of score.h  Submenu.h  Teacher Center Menu.cpp  Teacher Center Menu.h  User management menu.h  add course information.h  add student information.h  add teacher information.h  basis.h  console.h  conui.h  course list.h  course management menu.h  course_list.h  course_student_list.h  csu1.bitmap  delete course information.h  delete student information.h  delete teacher information.h  desc score.h  e.cpp  e.h  edit course information.h  edit student information.h  edit teacher information.h  elect_course.h  guangliyuan.cpp  guangliyuan.h  h1.h  h2.h  main.cpp  main.txt  painting.h  prelude.h  primary.txt  (+16 more)
db/: DAO.h  layer.h  serial.h  uniform.h
uis/: admin_main.h  all_uis.h  course_append.h  course_delete.h  course_list.h  course_list2.h  course_management.h  course_student_list.h  edit_course.h  edit_student.h  edit_teacher.h  elect_course.h  elect_course_main.h  import_score.h  manage_course.h  manage_student.h  manage_teacher.h  manage_users.h  score_desc_list.h  score_list.h  score_statistics.h  student_append.h  student_delete.h  student_list.h  student_main.h  teacher center meau.txt  teacher_append.h  teacher_delete.h  teacher_list.h  teacher_main.h  teacher_management.h  user_list.h
uis/backends/: course_append.h  course_delete.h  course_list.h  course_list2.h  course_student_list.h  edit_course.h  edit_student.h  edit_teacher.h  elect_course.h  import_score.h  score_desc_list.h  score_list.h  score_statistics.h  student_append.h  student_delete.h  student_list.h  teacher_append.h  teacher_delete.h  teacher_list.h
uis/protos/: Course List.txt  smain txt
